# flask_smorest_template

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  blueprint.py  config.py  extension.py
app/routers/: healthcheck_router.py
app/schemas/: healthcheck_schema.py
app/services/: healthcheck_service.py
app/utils/: constants.py  core_utils.py  logging.py
collection/: bruno.json  collection.bru
tests/integration/: test_healthcheck.py
tests/unit/: test_healthcheck_service.py
