[tool.poetry]
name = "flask-smorest-template"
version = "0.1.0"
description = "Template for creating REST API using flask-smorest"
authors = ["nileshverma054 <nileshverma054@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.13"
flask-smorest = "^0.44.0"


[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
